---------------------------------------------------------------------------------------------------
Version: 4.1.27
Date: 2022.04.XX
  Changes:
    - Baketorio support (Thanks, Jemsterr!)
---------------------------------------------------------------------------------------------------
Version: 4.1.26
Date: 2022.02.27
  Bugfixes:
    - Fixed that omnifurnaces couldn't use fuel with a burnt result
---------------------------------------------------------------------------------------------------
Version: 4.1.25
Date: 2022.02.05
  Bugfixes:
    - Fixed that the omnicium roll item had a tier number as small icon
---------------------------------------------------------------------------------------------------
Version: 4.1.24
Date: 2022.01.29
  Changes:
    - Added setting to opt-out of mining fluid requirement (for cowards)
    - Updated angels omnicium smelting tech and recipe updates
  Bugfixes:
    - Fixed that the burner omnitractor could not refine tier 1 crude ores
    - Fixed that processed omnicium could not be crafted in the ore processor 1
    - Fixed advanced omnicium casting 2 & 3 not having certain prerequisites
---------------------------------------------------------------------------------------------------
Version: 4.1.23
Date: 2022.01.17
  Features:
    - Added mining fluid compatibility to PY's ores
---------------------------------------------------------------------------------------------------
Version: 4.1.22
Date: 2022.01.04
  Features:
    - Ores that normally require a fluid to mine cant be extracted from omnite directly anymore
      The recipe now outputs a crude version of the ore which needs to be refined with the mining
      fluid to get the proper ore
  Changes:
    - Removed the setting to enable/disable infinite omnite. This can be done in the map generator
    - Properly order all extraction recipes by tier
    - Increased the crafting time of pure extractions from 5s/tier to 6.5s/tier to end up with even