@@ -75,7 +75,8 @@ omnisludge=Omni Sludge
 crushing-omnite-by-hand=Hand Crushing Omnite
 omniphlog=Omniphlog Mk__1__
 omnilation=__1__ omnilation
-crude-refinement= Crude __1__ refinement
+crude-refinement=Crude __1__ refinement
+omnic-waste-recycling=Omnic waste recycling
 
 [recipe-description]
 base_impure=Basic level of extraction.
