@@ -1,0 +1,6 @@
+{
+  "recipe":
+  [
+    ["omniflush-omnic-waste", "omnic-waste-recycling"]
+  ]
+}
